export type RootStackParamList = {
  Library: undefined;
  PracticeDetail: { sheetId: string };
  PdfImport: undefined;
};
